# polymonsters

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: health.h
src/: 1-inheritance.cpp  2-template-c++20.cpp  2-template.cpp  3-functional.cpp  4-variant.cpp  5-immutable.cpp  5-visit.cpp  6-immutable.cpp
